k8s/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ca-central-1:450444046629:certificate/fcde6b2e-1f60-4aa5-afe4-975dd3f6d742
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: user21.weplat.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic-service
                port:
                  number: 80
